--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "animate.css": "^3.5.2",
+    "bootstrap": "^3.3.7",
     "bootstrap-switch": "^3.3.4",
     "sweetalert": "^1.1.3"
   }
