--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,7 @@
 {
     "/css/main.css": "/css/main.css",
+    "/css/wickedpicker.min.css": "/css/wickedpicker.min.css",
+    "/fonts/fontello.woff": "/fonts/fontello.woff",
+    "/fonts/fontello.ttf": "/fonts/fontello.ttf",
     "/js/main.min.js": "/js/main.min.js"
 }
