--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "jquery-match-height": "^0.7.2",
     "jqvmap": "^1.5.1",
     "moment": "^2.18.1",
-    "select2": "^4.0.6-rc.0",
-    "wickedpicker": "^0.4.3"
+    "select2": "^4.0.6-rc.0"
   }
 }
