--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "irazasyed/telegram-bot-sdk": "^2.2",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "mtdowling/cron-expression": "^1.2"
+        "mtdowling/cron-expression": "^1.2",
+        "webpatser/laravel-uuid": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
