--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
     "require": {
         "php": ">=7.0.0",
         "fideloper/proxy": "^3.3",
+        "iboldurev/dialogflow": "^0.3.0",
         "irazasyed/telegram-bot-sdk": "^2.2",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "mtdowling/cron-expression": "^1.2",
-        "webpatser/laravel-uuid": "^3.0"
+        "webpatser/laravel-uuid": "^3.0",
+        "zarincheg/telegram-bot-dialogs": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
